--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "node_exo_files",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  }
+	"name": "node_exo_files",
+	"version": "0.1.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node .",
+		"dev": "nodemon .",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write .",
+		"prepare": "husky install"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"husky": "^7.0.4",
+		"nodemon": "^2.0.15",
+		"prettier": "^2.5.1"
+	}
 }
